--- a/app/Resources/views/admin/downloads/new.html.twig
+++ b/app/Resources/views/admin/downloads/new.html.twig
@@ -29,8 +29,8 @@
 
                     <div class="actions btn-set">
                         <a href="{{ path('admin_downloads_index') ~ pagination.buildQuery }}"
-                           class="btn red">
-                            <span class="fa fa-arrow-circle-o-left"></span> Voltar
+                           class="btn green">
+                            <span class="fa fa-check"></span> Concluído
                         </a>
                     </div>
 
