--- a/app/Resources/views/site/_partials/_banner.html.twig
+++ b/app/Resources/views/site/_partials/_banner.html.twig
@@ -1,4 +1,4 @@
-<div class="container_full slidertop">
+<div class="container_full">
 
     <div class="master-slider ms-skin-default" id="masterslider">
 
