--- a/app/Resources/views/admin/video/new.html.twig
+++ b/app/Resources/views/admin/video/new.html.twig
@@ -40,13 +40,16 @@
             <div role="tabpanel" class="tab-pane active" id="geral">
                 <div class="row">
                     <div class="col-md-6">{{ form_row(form.description) }}</div>
-                    <div class="col-md-6">{{ form_row(form.url) }}</div>
-                    {#https://www.youtube.com/oembed?url=http://www.youtube.com/watch?v=B4CRkpBGQzU&format=json#}
+                    <div class="col-md-6">{{ form_row(form.category) }}</div>
                 </div>
                 <div class="row">
+                    <div class="col-md-6">{{ form_row(form.url) }}</div>
+                    {#https://www.youtube.com/oembed?url=http://www.youtube.com/watch?v=B4CRkpBGQzU&format=json#}
                     <div class="col-md-6">{{ form_row(form.publishedAt, {'attr': {
                             'value': 'now'|date('d-m-Y H:i')
                         }}) }}</div>
+                </div>
+                <div class="row">
                     <div class="col-md-6">
                         {{ form_widget(form.isEnabled, {'attr': {'checked': true}}) }}
                     </div>
