--- a/app/Resources/views/admin/videoCategory/new.html.twig
+++ b/app/Resources/views/admin/videoCategory/new.html.twig
@@ -13,11 +13,11 @@
 
 {% block page_content %}
 
-    {% embed 'admin/_partials/_default_resource.html.twig' with {'route_index' : 'admin_video_index'} %}
+    {% embed 'admin/_partials/_default_resource.html.twig' with {'route_index' : 'admin_video_category_index'} %}
 
         {% block form_start %}
-            {{ form_start(form, {'action': path('admin_video_edit', {id: video.id}) ~ pagination.buildQuery,
-                'attr' : {'novalidate' : 'true'}}) }}
+            {{ form_start(form, {'action': path('admin_video_category_new') ~ pagination.buildQuery,
+                'attr' : {'class' : '_form-horizontal'}}) }}
         {% endblock %}
 
         {% block icon_list %}
@@ -26,7 +26,7 @@
 
         {% block caption_subject %}
             <span class="caption-subject font-green-sharp bold uppercase">
-                {{ 'admin.video.edit'|trans }}
+                {{ 'admin.video_category.new'|trans }}
             </span>
         {% endblock %}
 
@@ -40,19 +40,14 @@
             <div role="tabpanel" class="tab-pane active" id="geral">
                 <div class="row">
                     <div class="col-md-6">{{ form_row(form.description) }}</div>
-                    <div class="col-md-6">{{ form_row(form.category) }}</div>
-                </div>
-                <div class="row">
-                    <div class="col-md-6">{{ form_row(form.url) }}</div>
-                    <div class="col-md-6">{{ form_row(form.publishedAt) }}</div>
+                    <div class="col-md-6">{{ form_row(form.publishedAt, {'attr': {
+                            'value': 'now'|date('d-m-Y H:i')
+                        }}) }}</div>
                 </div>
                 <div class="row">
                     <div class="col-md-6">
-                        {{ form_widget(form.isEnabled) }}
+                        {{ form_widget(form.isEnabled, {'attr': {'checked': true}}) }}
                     </div>
-                </div>
-                <div class="row">
-                    <div class="col-md-12">{{ form_row(form.text, {'attr': {'rows': '10'}}) }}</div>
                 </div>
             </div>
         {% endblock %}
