--- a/app/Resources/views/site/_partials/_header.html.twig
+++ b/app/Resources/views/site/_partials/_header.html.twig
@@ -83,7 +83,7 @@
             <div class="container">
 
                 <!-- Logo -->
-                <div class="logo"><a href="index.html" id="logo"></a></div>
+                <div class="logo"><a href="{{ path('site_homepage') }}" id="logo"></a></div>
 
                 <!-- Menu -->
                 <div class="menu_main">
