texto pagina sobre

--- a/app/Resources/views/site/sobre/index.html.twig
+++ b/app/Resources/views/site/sobre/index.html.twig
@@ -30,7 +30,7 @@
                 automatizar processos, eliminando erros humanos e aumentando a produtividade das
                 empresas.</p>
             <br>
-            <p>A RC Informática possui uma carteira de mais de 600 clientes ativos, de segmentos e setores
+            <p>A RC Informática possui uma carteira extensa de clientes ativos, de segmentos e setores
                 variados, e se mantém atenta às demandas do mercado e às mudanças na legislação,
                 mantendo profissionais especializados e em acompanhamento full time para garantir
                 atualizações rápidas.</p>
