texto pagina sobre 2

--- a/app/Resources/views/site/sobre/index.html.twig
+++ b/app/Resources/views/site/sobre/index.html.twig
@@ -30,9 +30,9 @@
                 automatizar processos, eliminando erros humanos e aumentando a produtividade das
                 empresas.</p>
             <br>
-            <p>A RC Informática possui uma carteira extensa de clientes ativos, de segmentos e setores
-                variados, e se mantém atenta às demandas do mercado e às mudanças na legislação,
-                mantendo profissionais especializados e em acompanhamento full time para garantir
+            <p>A RC Informática possui uma carteira extensa de clientes ativos atuando em vários municípios de nosso
+                Estado, principalmente na grande Vitória, e se mantém atenta às demandas do mercado e às mudanças na
+                legislação, mantendo profissionais especializados e em acompanhamento full time para garantir
                 atualizações rápidas.</p>
             <br>
             <p>Por isso a RC Informática está altamente preparada para oferecer a melhor solução para cada
