--- a/app/Resources/views/site/_partials/_header.html.twig
+++ b/app/Resources/views/site/_partials/_header.html.twig
@@ -46,7 +46,7 @@
                         <ul>
                             <li class="link">
                                 <a class="" href="#">
-                                    <i class="fa fa-envelope"></i> atendimento1@rcinformatica.net.brrs
+                                    <i class="fa fa-envelope"></i> atendimento1@rcinformatica.net.br
                                 </a>
                             </li>
                             <li class="link">
