--- a/app/Resources/views/admin/customer/edit.html.twig
+++ b/app/Resources/views/admin/customer/edit.html.twig
@@ -1,5 +1,17 @@
 {% extends 'admin/base.html.twig' %}
 
+{% block stylesheets %}
+    {% embed 'admin/_partials/_block_stylesheets.html.twig' %}
+
+        {% block page_level_plugins %}
+            <link rel="stylesheet"
+                  href="{{ asset('bower_components/bootstrap-datetimepicker/css/datetimepicker.css') }}">
+        {% endblock %}
+
+    {% endembed %}
+{% endblock %}
+
+
 {% block page_content %}
 
     {% embed 'admin/_partials/_default_resource.html.twig' with {'route_index' : 'admin_customer_index'} %}
@@ -28,6 +40,9 @@
             </li>
             <li role="presentation">
                 <a href="#addresses" aria-controls="addresses" role="tab" data-toggle="tab">Endereço</a>
+            </li>
+            <li role="presentation">
+                <a href="#cms" aria-controls="cms" role="tab" data-toggle="tab">Conteúdo Site</a>
             </li>
         {% endblock %}
 
@@ -75,6 +90,18 @@
 
                 </div>
             </div>
+            <div role="tabpanel" class="tab-pane" id="cms">
+                <div class="row">
+                    <div class="col-md-6">{{ form_row(form.url) }}</div>
+                    <div class="col-md-6">{{ form_row(form.imageFile) }}</div>
+                </div>
+                <div class="row">
+                    <div class="col-md-6">{{ form_row(form.publishedAt) }}</div>
+                </div>
+                <div class="row">
+                    <div class="col-md-12">{{ form_row(form.text)}}) }}</div>
+                </div>
+            </div>
         {% endblock %}
 
     {% endembed %}
@@ -83,9 +110,16 @@
 
 {% block javascripts %}
     {% embed 'admin/_partials/_block_javascripts.html.twig' %}
+        {% block page_level_plugins %}
+            <script src="{{ asset('admin/assets/global/plugins/moment.min.js') }}"></script>
+            <script src="{{ asset('bower_components/bootstrap-datetimepicker/js/bootstrap-datetimepicker.min.js') }}"
+                    type="text/javascript"></script>
+            <script src="{{ asset('bower_components/bootstrap-datetimepicker/js/locales/bootstrap-datetimepicker.pt-BR.js') }}"></script>
+        {% endblock %}
         {% block page_level_scripts %}
             <script src="{{ asset('bower_components/jquery.inputmask/dist/jquery.inputmask.bundle.js') }}"></script>
             <script src="{{ asset('admin/assets/global/scripts/customerAddressesCollection.js') }}"></script>
+            <script src="{{ asset('admin/assets/pages/scripts/components-date-time-pickers.js') }}"></script>
         {% endblock %}
     {% endembed %}
 {% endblock %}
